--- a/3.html
+++ b/3.html
@@ -1,21 +1,77 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>WEB3 - JavaScript</title>
-  </head>
+<!doctype html>
+<html>
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154460963-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-154460963-1');
+</script>
+<style>
+body {
+  margin: 0;
+}
+  a {
+    color: black;
+    text-decoration: none;
+  }
+  h1 {
+    font-size: 45px;
+    text-align: center;
+    border-bottom:1px solid gray;
+    margin:0;
+    padding: 20px;
+  }
+  ol {
+    border-right: 1px solid gray;
+    width: 100px;
+    margin: 0;
+    padding: 20px;
+  }
+  #grid{
+    display: grid;
+    grid-template-columns: 150px 1fr;
+  }
+  #grid ol{
+    padding-left: 33px;
+  }
+  #article{
+    padding-left: 25px;
+  }
+  @media(max-width:700px){
+    #grid{
+      display: block;
+    }
+    ol {
+      border-right: none;
+    }
+    h1 {
+      border-bottom: none;
+    }
+
+  }
+</style>
+<title>WEB2 - JavaScript</title>
+<meta charset="utf-8">
+</head>
   <body>
     <h1><a href="index.html" title="WEB main">WEB</a></h1>
+    <div id="grid">
     <ol>
       <li><a href="1.html" title="HTML">HTML</a></li>
       <li><a href="2.html" title="CSS">CSS</a></li>
       <li><a href="3.html" title="JavaScript">JavaScript</a></li>
     </ol>
+    <div id="article">
     <h2>JavaScript</h2>
     <p><a href="https://terms.naver.com/entry.nhn?docId=2455068&cid=42346&categoryId=42346"
       target="_blank" title="JavaScript Specification">JavaScript</a>는웹 페이지에서 사용자로부터 특정 이벤트나 입력 값을 받아
       동적인 처리를 목적으로 고안된 객체 기반의 스크립트 프로그래밍 언어이다.</p>
       <p>사용자 경험을 향상시키기 위한 방법으로 주로 사용된다. 일반적으로 HTML 문서에 내재되며, 브라우저에서 실행된다.</p>
-
+    </div>
+    </div>
   </body>
 </html>
