--- a/index.html
+++ b/index.html
@@ -1,15 +1,73 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>WEB main</title>
-  </head>
+<!doctype html>
+<html>
+<head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-154460963-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-154460963-1');
+</script>
+<style>
+body {
+  margin: 0;
+}
+  a {
+    color: black;
+    text-decoration: none;
+  }
+  h1 {
+    font-size: 45px;
+    text-align: center;
+    border-bottom:1px solid gray;
+    margin:0;
+    padding: 20px;
+  }
+  ol {
+    border-right: 1px solid gray;
+    width: 100px;
+    margin: 0;
+    padding: 20px;
+  }
+  #grid{
+    display: grid;
+    grid-template-columns: 150px 1fr;
+  }
+  #grid ol{
+    padding-left: 33px;
+  }
+  #article{
+    padding-left: 25px;
+  }
+  @media(max-width:700px){
+    #grid{
+      display: block;
+    }
+    ol {
+      border-right: none;
+    }
+    h1 {
+      border-bottom: none;
+    }
+
+  }
+</style>
+<title>WEB 0 - WEB MAIN</title>
+<meta charset="utf-8">
+</head>
   <body>
     <h1><a href="index.html" title="WEB main">WEB</a></h1>
+    <div id="grid">
     <ol>
       <li><a href="1.html" title="html">HTML</a></li>
       <li><a href="2.html" title="CSS">CSS</a></li>
       <li><a href="3.html" title="JavaScript">JavaScript</a></li>
     </ol>
+    <div id="article">
+      <p>웹 기본 홈페이지 만들기 메인 홈페이지입니다. 좌측 링크를 클릭하시면 해당 홈페이지로 이동합니다.</p>
+    </div>
+  </div>
   </body>
 </html>
