--- a/1.html
+++ b/1.html
@@ -10,55 +10,15 @@
 
   gtag('config', 'UA-154460963-1');
 </script>
-<style>
-body {
-  margin: 0;
-}
-  a {
-    color: black;
-    text-decoration: none;
-  }
-  h1 {
-    font-size: 45px;
-    text-align: center;
-    border-bottom:1px solid gray;
-    margin:0;
-    padding: 20px;
-  }
-  ol {
-    border-right: 1px solid gray;
-    width: 100px;
-    margin: 0;
-    padding: 20px;
-  }
-  #grid{
-    display: grid;
-    grid-template-columns: 150px 1fr;
-  }
-  #grid ol{
-    padding-left: 33px;
-  }
-  #article{
-    padding-left: 25px;
-  }
-  @media(max-width:700px){
-    #grid{
-      display: block;
-    }
-    ol {
-      border-right: none;
-    }
-    h1 {
-      border-bottom: none;
-    }
-
-  }
-</style>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<script src="colors.js"></script>
+<link rel="stylesheet" href="style.css">
 <title>WEB1 - HTML</title>
 <meta charset="utf-8">
 </head>
 <body>
-  <h1><a href="index.html" title="WEB main">WEB</a></h1>
+    <input type="button"  value="night" onclick="nightDayHandler(this)">
+    <h1><a href="index.html" title="WEB main">WEB</a></h1>
 <div id="grid">
   <ol>
     <li><a href="1.html">HTML</a></li>
